[package]
name = "rosetta_uuid"
version = "0.1.0"
edition.workspace = true

[dependencies]
uuid = { version = "1.13", features = ["serde", "v4", "js"] }
diesel = { workspace = true, optional = true, features = ["uuid"] }
pgrx = { workspace = true, optional = true, features = ["pg17"] }
pgrx-sql-entity-graph = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
diesel = ["dep:diesel"]
postgres = ["diesel", "diesel/postgres"]
sqlite = ["diesel", "diesel/sqlite"]
pgrx = ["dep:pgrx", "dep:pgrx-sql-entity-graph"]
redis = ["dep:redis"]

[lints]
workspace = true
