[package]
name = "diesel-pgrx"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel-pgrx-derive = { workspace = true, optional = true }
serde_cbor = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
diesel = { workspace = true, features = ["postgres"], optional = true }

[dev-dependencies]
testcontainers.workspace = true
tokio.workspace = true
diesel-async = { workspace = true, features = ["postgres", "sqlite"] }
example_extension = { workspace = true, features = ["postgres"] }

[features]
default = ["macro"]
macro = [
  "dep:serde",
  "dep:diesel-pgrx-derive",
  "dep:serde_cbor",
  "dep:diesel",
  "dep:byteorder",
]
