[package]
name = "diesel_pgrx"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Diesel ORM integration for PGRX PostgreSQL extensions using binary protocol"
readme = "README.md"
keywords = ["diesel", "pgrx", "postgresql", "orm", "database"]
categories = ["database"]

[dependencies]
diesel_pgrx_derive = { version = "0.1.0", path = "../diesel_pgrx_derive" }
serde.workspace = true
serde_cbor = { workspace = true, features = ["unsealed_read_write"] }
diesel.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio.workspace = true
diesel = { workspace = true, features = ["postgres", "sqlite"] }
diesel_pgrx_derive = { version = "0.1.0", path = "../diesel_pgrx_derive", features = ["postgres", "sqlite"] }
example_extension.workspace = true

[features]
default = []
postgres = ["diesel_pgrx_derive/postgres", "diesel/postgres"]
sqlite = ["diesel_pgrx_derive/sqlite", "diesel/sqlite"]
# The pgrx feature is solely used in the doctest.
pgrx = []
