[package]
name = "diesel_pgrx_derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for diesel_pgrx - Diesel ORM integration with PGRX"
readme = "README.md"
keywords = ["diesel", "pgrx", "postgresql", "derive", "macro"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[features]
default = []
postgres = []
sqlite = []
pgrx = []

[dev-dependencies]
diesel = { workspace = true, features = ["postgres", "sqlite"] }
serde.workspace = true
diesel_pgrx = { workspace = true, features = ["postgres", "sqlite"] }

[lints]
workspace = true
