[package]
name = "backend"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/earth-metabolome-initiative/emi-monorepo"
license = "GPL-3.0"
keywords = ["metabolomics", "database", "backend", "web", "api"]
readme = "README.md"
categories = ["science", "database", "web", "api"]
authors = ["Earth Metabolome Initiative"]
description = "Backend for the Earth Metabolome Initiative"

[dependencies]
chrono.workspace = true
diesel.workspace = true
diesel-async = { workspace = true, features = ["bb8", "pool", "postgres"] }
serde.workspace = true
serde_json.workspace = true
rosetta-uuid.workspace = true
bincode.workspace = true
futures.workspace = true
api-path.workspace = true
backend-request-errors.workspace = true
postgis_diesel.workspace = true
rand.workspace = true
init-db.workspace = true
init-migration.workspace = true
tokio.workspace = true
core-structures = { workspace = true, features = ["backend"] }
web_common_traits = { workspace = true, features = ["backend"] }
openssl = { version = "0.10" }
actix-cors = "0.7.1"
actix-web.workspace = true
actix-web-httpauth = "0.8.2"
actix-service = "2.0.3"
actix-http = "3.10.0"
actix-files = "0.6.6"
actix-ws.workspace = true
ws-messages = { workspace = true, features = ["backend"] }
log.workspace = true
futures-util.workspace = true
env_logger = "0.11"
time = "0.3"
jsonwebtoken = "9.3.1"
reqwest.workspace = true
redis.workspace = true
base64 = "0.22"
image.workspace = true
