[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
repository = "https://github.com/earth-metabolome-initiative/emi-monorepo"
license = "GPL-3.0"
keywords = ["metabolomics", "database", "backend", "web", "api"]
readme = "README.md"
categories = ["science", "database", "web", "api"]
authors = ["Earth Metabolome Initiative"]
description = "Backend for the Earth Metabolome Initiative"

[dependencies]
chrono.workspace = true
diesel = { workspace = true, features = ["r2d2", "postgres"] }
serde.workspace = true
serde_json.workspace = true
rosetta_uuid = { workspace = true, features = ["redis", "postgres"] }
bincode.workspace = true
futures.workspace = true
api_path.workspace = true
generic_backend_request_errors.workspace = true
backend_request_errors.workspace = true
postgis_diesel.workspace = true
rand.workspace = true
init_db.workspace = true
init_migration.workspace = true
tokio.workspace = true
core_structures = { workspace = true, features = ["backend"] }
openssl = { version = "0.10" }
actix-cors.workspace = true
actix-web.workspace = true
actix-web-httpauth.workspace = true
actix-http.workspace = true
actix-files.workspace = true
actix-ws.workspace = true
actix-web-codegen.workspace = true
ws_messages = { workspace = true, features = ["backend"] }
log.workspace = true
futures-util.workspace = true
env_logger = "0.11"
time = "0.3"
jsonwebtoken = "9.3.1"
reqwest.workspace = true
redis.workspace = true
base64 = "0.22"
image.workspace = true

[lints]
workspace = true
