[package]
name = "core-structures"
version = "0.1.0"
edition = "2024"

[dependencies]
postgis_diesel = { workspace = true, features = ["diesel"] }
rosetta-uuid = { workspace = true, features = ["diesel"] }
rosetta-timestamp = { workspace = true, features = ["diesel"] }
chrono.workspace = true
diesel = { workspace = true, features = ["extras"] }
diesel-async.workspace = true
web_common_traits.workspace = true
serde = { workspace = true, optional = true }
common-traits.workspace = true
generic-backend-request-errors.workspace = true
pgrx_validation.workspace = true
iso_codes.workspace = true
tool_categories.workspace = true
instrument_categories.workspace = true
nameplate_categories.workspace = true
container_categories.workspace = true
validation-errors.workspace = true
yew = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = [
  "postgis_diesel/serde",
  "dep:serde",
  "rosetta-uuid/serde",
  "rosetta-timestamp/serde",
  "iso_codes/serde",
  "tool_categories/serde",
  "instrument_categories/serde",
  "nameplate_categories/serde",
  "container_categories/serde",
]
yew = ["dep:yew"]
postgres = [
  "diesel-async/postgres",
  "diesel/postgres",
  "postgis_diesel/postgres",
  "rosetta-uuid/postgres",
  "rosetta-timestamp/postgres",
  "iso_codes/postgres",
  "iso_codes/diesel_pgrx",
  "tool_categories/postgres",
  "instrument_categories/postgres",
  "tool_categories/diesel_pgrx",
  "instrument_categories/diesel_pgrx",
  "nameplate_categories/postgres",
  "container_categories/postgres",
  "nameplate_categories/diesel_pgrx",
  "container_categories/diesel_pgrx",
]
sqlite = [
  "diesel/sqlite",
  "postgis_diesel/sqlite",
  "diesel/returning_clauses_for_sqlite_3_35",
  "rosetta-uuid/sqlite",
  "rosetta-timestamp/sqlite",
  "iso_codes/sqlite",
  "iso_codes/diesel_pgrx",
  "tool_categories/sqlite",
  "instrument_categories/sqlite",
  "tool_categories/diesel_pgrx",
  "instrument_categories/diesel_pgrx",
  "nameplate_categories/sqlite",
  "container_categories/sqlite",
  "nameplate_categories/diesel_pgrx",
  "container_categories/diesel_pgrx",
]
backend = ["postgres", "web_common_traits/backend"]
frontend = ["sqlite", "yew", "web_common_traits/frontend"]
