[package]
name = "core_structures"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {workspace = true, optional = true}
diesel-async = {workspace = true, optional = true}
diesel_utils = { workspace = true, optional = true }
postgis_diesel.workspace = true
uuid.workspace = true
chrono.workspace = true
web_common_traits.workspace = true
serde = {workspace = true, optional = true}
common-traits.workspace = true

[build-dependencies]
taxonomy-fetcher.workspace = true
csqlv.workspace = true
tokio.workspace = true
font_awesome.workspace = true
diesel.workspace = true
testcontainers.workspace = true
webcodegen.workspace = true
diesel_migrations_utils.workspace = true
time-requirements.workspace = true

[features]
default = ["serde"]
serde = ["postgis_diesel/serde", "dep:serde"]
diesel = ["dep:diesel-async", "dep:diesel", "postgis_diesel/diesel", "dep:diesel_utils"]
backend = ["diesel", "web_common_traits/backend"]
frontend = ["web_common_traits/frontend"]